sandbox/output
StockProfit.cpp:3:38: error: unused parameter 'prices' [-Werror,-Wunused-parameter]
StockProfit::StockProfit(vector<int> prices) {
                                     ^
1 error generated.
StockProfit.tests.cpp:11:47: error: no member named 'getTransactions' in 'StockProfit'
    ASSERT_EQ(expectTransactions, stockProfit.getTransactions);
                                  ~~~~~~~~~~~ ^
/usr/include/gtest/gtest.h:1889:54: note: expanded from macro 'ASSERT_EQ'
# define ASSERT_EQ(val1, val2) GTEST_ASSERT_EQ(val1, val2)
                                                     ^
/usr/include/gtest/gtest.h:1873:33: note: expanded from macro 'GTEST_ASSERT_EQ'
                      expected, actual)
                                ^
/usr/include/gtest/gtest_pred_impl.h:166:40: note: expanded from macro 'ASSERT_PRED_FORMAT2'
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_FATAL_FAILURE_)
                                       ^
/usr/include/gtest/gtest_pred_impl.h:147:43: note: expanded from macro 'GTEST_PRED_FORMAT2_'
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2),\
                                          ^
/usr/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro 'GTEST_ASSERT_'
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^
1 error generated.
make: *** [test] Error 1
